Fixed issue with wrapping text in statusbar

--- a/client/main/statusbar/statusbar.css
+++ b/client/main/statusbar/statusbar.css
@@ -30,6 +30,7 @@
     font-size: 80%;
     line-height: 1ch;
     margin: 0px 9px;
+    white-space: nowrap;
 }
 
 
